[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["Alex Clerc <alex.clerc@res-group.com>"]
readme = "README.md"
packages = [{include = "project_euler"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.3"
poethepoet = "^0.24.1"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
select = [ # see https://beta.ruff.rs/docs/rules/
  "A", "E", "F", "UP", "I", "W", "SIM", "RUF" # , "C901"
]

[tool.poe.tasks]
[tool.poe.tasks.lint]
help = "Lint"
sequence = [
    { cmd = "poetry run black ." },
    { cmd = "poetry run ruff . --fix" },
]